# qiskit-aqt-provider

./: .gitignore  .mailmap  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  TRANSPILATION_AND_PRIMITIVES.md  azure-pipelines.yml  conftest.py  constraints.txt  ecosystem.json  example.py  pyproject.toml  pytest.ini  read-target-coverage.py  requirements-dev.txt  requirements.txt  setup.py  tach.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  documentation.md
.github/workflows/: docs.yml  main.yml  poetry.yml  release.yml  tests.yml
api/: aqt_public.yml
docs/: access.rst  conf.py  guide.rst  index.rst  install.rst
docs/apidoc/: api_client.rst  backends.rst  device.rst  device_ibex.rst  device_pine.rst  job.rst  noise_simulator.rst  options.rst  primitives.rst  provider.rst  resource.rst  simulator.rst  transpiler_plugin.rst
examples/: debug_121.py  debug_122.py  example.py  example_noise.py  examples_from_ibm.py  grover-3-sat.py  number_partition.py  qaoa.py  quickstart-estimator.py  quickstart-sampler.py  quickstart-transpile.py  run_all.sh  vqe.py
qiskit/providers/aqt/: Untitled.ipynb  __init__.py  aqt_account.py  aqt_backend.py  aqt_job.py  aqt_provider.py  circuit_to_aqt.py  qobj_to_aqt.py
qiskit_aqt/: aqt_backend.py  aqt_job.py  aqt_provider.py  qobj_to_aqt.py
qiskit_aqt_provider/: __init__.py  api_models.py  api_models_generated.py  aqt_account.py  aqt_backend.py  aqt_job.py  aqt_job_new.py  aqt_options.py  aqt_provider.py  aqt_resource.py  circuit_to_aqt.py  constants.py  exceptions.py  persistence.py  qir_to_aqt.py  qobj_to_aqt.py  transpiler_plugin.py  utils.py  version.py  versions.py
qiskit_aqt_provider/_cloud/: config.py  job.py  job_metadata.py  provider.py  resource.py  workspace_collection.py  workspace_provider.py
qiskit_aqt_provider/api_client/: __init__.py  errors.py  models.py  models_direct.py  models_generated.py  portal_client.py  versions.py
qiskit_aqt_provider/primitives/: __init__.py  estimator.py  sampler.py
qiskit_aqt_provider/test/: __init__.py  circuits.py  fixtures.py  resources.py  timeout.py  utils.py
scripts/: api_models.py  check_pre_commit_consistency.sh  extract-changelog.py  package_version.py  read-target-coverage.py  setuptools_requirements.sh
test/: helpers.py  test_api_models.py  test_circuit_to_aqt.py  test_circuit_to_aqt_new.py  test_execution.py  test_job.py  test_job_persistence.py  test_options.py  test_primitives.py  test_provider.py  test_qir_to_aqt.py  test_qobj_to_aqt.py  test_resource.py  test_transpilation.py  test_utils.py
test/acceptance/: conftest.py
test/acceptance/cloud_provider/: test_backend_acquisition.py  test_job_result.py  test_job_submission.py  test_workspace_discovery.py
test/acceptance/dsl/: __init__.py  expect.py  user.py
test/acceptance/support/: dummy_api.py
test/api_client/: test_errors.py  test_models.py
test/integration/: fixtures.py  helpers.py
test/integration/cloud/: test_resource.py
test/integration/cloud/job/: _helpers.py  test_result.py  test_status.py  test_submit.py
test/integration/cloud/provider/: test_fetch_workspaces.py  test_init_access_token.py  test_login.py
test/integration/cloud/resource/: test_run.py
test/integration/cloud/workspace_provider/: test_get_backend.py  test_list_backends.py  test_properties.py
test/integration/transpilation/: test_transpilation_output.py  test_transpilation_plugins.py  test_transpilation_target.py
test/unit/: test_aqt_provider.py
test/unit/cloud/: test_config.py  test_provider.py  test_workspace_collection.py
test/unit/transpiler/: test_pass_ensure_single_final_measurement.py  test_pass_rewrite_rx_as_r.py  test_pass_wrap_rxx_angles.py
tools/: deploy_documentation.sh
