[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=1",
]

[tool.poetry]
name = "qiskit-aqt-provider"
version = "1.5.0"
description = "Qiskit provider for AQT backends"
authors = [
  "Qiskit Development Team",
  "Alpine Quantum Technologies GmbH",
]
repository = "https://github.com/qiskit-community/qiskit-aqt-provider"
documentation = "https://qiskit-community.github.io/qiskit-aqt-provider"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
keywords = [
  "qiskit",
  "sdk",
  "quantum",
]

packages = [
  { include = "qiskit_aqt_provider" },
  { include = "test", format = "sdist" },
]
include = [
  "CODE_OF_CONDUCT.md",
  "CONTRIBUTING.md",
  "LICENSE.txt",
  "README.md",
]

[tool.poetry.plugins."qiskit.transpiler.scheduling"]
aqt = "qiskit_aqt_provider.transpiler_plugin:AQTSchedulingPlugin"

[tool.poetry.plugins."qiskit.transpiler.translation"]
aqt = "qiskit_aqt_provider.transpiler_plugin:AQTTranslationPlugin"

[tool.poetry.plugins.pytest11]
pytest_qiskit_aqt = "qiskit_aqt_provider.test.fixtures"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

httpx = ">=0.24.0"
platformdirs = ">=3"
pydantic = ">=2.5.0"
pyqir = { version = "^0.10.2", optional = true }
python-dotenv = ">=1"
qiskit = "^1"
qiskit-aer = ">=0.13.2"
qiskit-algorithms = { version = ">=0.2.1", optional = true }
qiskit-optimization = { version = ">=0.6.0", optional = true }
tabulate = ">=0.9.0"
tqdm = ">=4"
typing-extensions = ">=4.0.0"

[tool.poetry.group.dev.dependencies]
autodoc-pydantic = "^2.0.1"
coverage = "^7.2.1"
datamodel-code-generator = "^0.25.3"
hypothesis = "^6.82.0"
interrogate = "^1.5.0"
ipykernel = "^6.22.0"
jupyter-sphinx = "^0.4.0"
mistletoe = "^1.1.0"
mypy = "=1.10.0"
poethepoet = "^0.18.1"
polyfactory = "^2.0.0"
pre-commit = "^3.1.1"
pyproject-fmt = "^2.1.3"
pytest = ">=7"
pytest-httpx = "^0.22.0"
pytest-mock = "^3.11.1"
pytest-sugar = "^1.0.0"
qiskit-experiments = "^0.6.0"
qiskit-qir = "^0.5.0"
qiskit-sphinx-theme = ">=1.16.1"
qiskit = { version = "^1", extras = [
  "visualization",
] }
rich = "^13.5.3"
ruff = "^0.4.6"
sphinx = ">=7,<7.3"
tomlkit = "^0.12.1"
typer = "^0.12.0"
types-requests = "^2.28.11"
types-setuptools = "^65.7.0"
types-tabulate = "^0.9.0.1"
types-tqdm = "^4.65.0.1"
typos = "^1.21.0"

[tool.poetry.extras]
examples = [
  "qiskit-algorithms",
  "qiskit-optimization",
]
qir = [
  "pyqir",
]

[tool.ruff]
target-version = "py39"
line-length = 100
extend-exclude = [
  "qiskit_aqt_provider/api_models_generated.py", # generated code
]

lint.select = [
  "ARG", # flake8-unused-arguments
  "BLE", # flake8-blind-except
  "C4",  # flake8-comprehensions
  "C90", # mccabe
  "COM", # flake8-commas
  "D",   # pydocstyle
  "E",   # pycodestyle errors
  "ERA", # eradicate
  "F",   # pyflakes
  "I",   # isort
  "ICN", # flake8-import-conventions
  "ISC", # flake8-implicit-str-concat
  "NPY", # numpy
  "PGH", # pygrep-hooks
  "PIE", # flake8-pie
  "PT",  # flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "PYI", # flake8-pyi
  "RET", # flake8-return
  "RSE", # flake8-raise
  "RUF", # ruff specials
  "S",   # flake8-bandit
  "SIM", # flake8-simplify
  "T10", # flake8-debugger
  "T20", # flake8-print
  "TID", # flake8-tidy-imports
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]
lint.ignore = [
  "COM812",
  "COM819",
  "D100",   # missing docstring in public module
  "D101",   # missing docstring in public class
  "D102",   # missing docstring in public method
  "D104",   # missing docstring in public package
  "D107",   # missing docstring in __init__
  "D206",
  "D211",   # no-blank-line-before-class (incompatible with D203)
  "D213",   # multiline-summary-second-line (incompatible with D212)
  "D300",
  "E111",
  "E114",
  "E117",
  "E501",
  "ISC001",
  "ISC002",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "S311",   # suspicious-non-cryptographic-random-usage
  "SIM117", # multiple-with-statements
  #
  # ignore following rules since they are conflicting with the formatter
  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "W191",
]
lint.per-file-ignores."examples/*.py" = [
  "T201", # allow prints
]
lint.per-file-ignores."scripts/*.py" = [
  "T201", # allow prints
]
lint.per-file-ignores."test/**/*.py" = [
  "D205",  # allow multiline docstring summaries
  "PT011", # allow pytest.raises without match=
  "S101",  # allow assertions
]
lint.pydocstyle.convention = "google"

[tool.coverage.run]
dynamic_context = "test_function"
relative_files = true

[tool.coverage.report]
fail_under = 99

[tool.pyright]
exclude = [
  "**/__pycache__",
  "**/.*",
  "docs/",
]

typeCheckingMode = "basic"
analyzeUnannotatedFunctions = false
reportShadowedImports = true
reportTypeCommentUsage = true
reportImportCycles = false
reportMissingImports = false
reportMissingTypeStubs = false
reportConstantRedefinition = true
reportUnnecessaryTypeIgnoreComment = false

reportDuplicateImport = "error"

pythonVersion = "3.9"
pythonPlatform = "Linux"

[tool.datamodel-codegen]
disable-timestamp = true
enable-faux-immutability = true
enum-field-as-literal = "one"
field-constraints = true
output-model-type = "pydantic_v2.BaseModel"
strict-nullable = true
target-python-version = '3.9'
use-annotated = true
use-double-quotes = true
use-field-description = true
use-schema-description = true
wrap-string-literal = true

[tool.interrogate]
ignore-module = true
ignore-nested-functions = true
ignore-magic = true
exclude = [
  "qiskit_aqt_provider/api_models_generated.py",
]
fail-under = 100

[tool.typos.files]
ignore-hidden = false
ignore-vcs = true
extend-exclude = [
  ".git",
]

[tool.typos.default.extend-words]
# 'aer' is the name of the Qiskit simulator backend
aer = "aer"

[tool.poe.tasks.test]
shell = """
set -eu
coverage run ${cov_opts} -m pytest --hypothesis-profile=ci
coverage report
"""

[[tool.poe.tasks.test.args]]
name = "cov_opts"
default = ""

[tool.poe.tasks.format]
shell = """
ruff format .
pyproject-fmt .
"""

[tool.poe.tasks.python_format_check]
shell = "ruff format --check ."

[tool.poe.tasks.pyproject_format_check]
shell = "pyproject-fmt --check ."

[tool.poe.tasks.typecheck]
shell = "mypy ."

[tool.poe.tasks.check_api_models]
shell = "./scripts/api_models.py check"

[tool.poe.tasks.ruff_check]
shell = "ruff check ."

[tool.poe.tasks.docstring_coverage]
shell = "interrogate -v qiskit_aqt_provider test"

[tool.poe.tasks.spellcheck]
shell = "typos ."

[tool.poe.tasks]
lint = [
  "check_api_models",
  "docstring_coverage",
  "ruff_check",
  "spellcheck",
]
format_check = [
  "python_format_check",
  "pyproject_format_check",
]
generate-models = "./scripts/api_models.py generate"
version_check = "./scripts/package_version.py --verbose check"
docs = "sphinx-build -j auto -b html -W docs docs/_build"
all = [
  "version_check",
  "format_check",
  "lint",
  "typecheck",
  "test",
  "docs",
]
