[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=1",
]

[tool.poetry]
name = "qiskit-aqt-provider"
version = "1.14.0"
description = "Qiskit provider for AQT backends"
authors = [
  "Qiskit Development Team",
  "Alpine Quantum Technologies GmbH",
]
repository = "https://github.com/qiskit-community/qiskit-aqt-provider"
documentation = "https://qiskit-community.github.io/qiskit-aqt-provider"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
keywords = [
  "qiskit",
  "sdk",
  "quantum",
]
packages = [
  { include = "qiskit_aqt_provider" },
  { include = "test", format = "sdist" },
]
include = [
  "CODE_OF_CONDUCT.md",
  "CONTRIBUTING.md",
  "LICENSE.txt",
  "README.md",
]
requires-poetry = ">=2.0"
dependencies.python = ">=3.9,<3.14"
dependencies.annotated-types = ">=0.7.0"
dependencies.httpx = ">=0.24.0"
dependencies.platformdirs = ">=3"
dependencies.pydantic = { version = ">=2.5.0", allow-prereleases = false }
dependencies.pydantic-core = ">=2"
dependencies.pytest = { version = ">=8", optional = true }
dependencies.pytest-httpx = { version = "^0.35.0", optional = true }
dependencies.python-dotenv = ">=1"
dependencies.qiskit = { version = "^1", allow-prereleases = false }
dependencies.qiskit-aer = ">=0.13.2"
dependencies.qiskit-algorithms = { version = ">=0.2.1,<0.4", optional = true }
dependencies.qiskit-optimization = { version = ">=0.6.0", optional = true }
dependencies.tabulate = ">=0.9.0"
dependencies.tqdm = ">=4"
dependencies.typing-extensions = ">=4.0.0"
# Restrict to versions with published wheels.
dependencies.scipy = [
  { version = "^1.15", python = ">=3.10" },
  { version = "^1,<1.15", python = "<3.10" },
]
# Restrict to versions with published wheels.
dependencies.numpy = [
  { version = ">=1,<2.1", python = "<=3.9" },
  { version = ">=1", python = ">3.9,<3.13" },
  { version = ">=2.1", python = ">=3.13" },
]
dependencies.aqt-connector = "0.3.0"
# Dependencies for the example scripts.
extras.examples = [
  "qiskit-algorithms",
  "qiskit-optimization",
]
# Dependencies for the pytest plugin.
extras.test = [
  "pytest",
  "pytest-httpx",
]
group.dev.dependencies.autodoc-pydantic = "^2.0.1"
group.dev.dependencies.coverage = "^7.2.1"
group.dev.dependencies.datamodel-code-generator = "^0.31.0"
group.dev.dependencies.deptry = "^0.23.0"
group.dev.dependencies.hypothesis = "^6.82.0"
group.dev.dependencies.interrogate = "^1.5.0"
group.dev.dependencies.ipykernel = "^6.22.0"
group.dev.dependencies.jupyter-sphinx = "^0.5.0"
group.dev.dependencies.mistletoe = "^1.1.0"
group.dev.dependencies.mypy = "^1.14.0"
group.dev.dependencies.poethepoet = "^0.36.0"
group.dev.dependencies.polyfactory = "^2.0.0"
group.dev.dependencies.pytest-mock = "^3"
group.dev.dependencies.pytest-sugar = "^1"
group.dev.dependencies.pre-commit = "^3.1.1"
group.dev.dependencies.pyproject-fmt = "2.8.0"
group.dev.dependencies.qiskit-sphinx-theme = ">=1.16.1"
group.dev.dependencies.qiskit = { version = "^1", extras = [
  "visualization",
] }
group.dev.dependencies.rich = "^13.5.3"
group.dev.dependencies.ruff = "^0.12.0"
group.dev.dependencies.sphinx = ">=7,<7.3"
group.dev.dependencies.sphinx-toolbox = "^3.5.0"
group.dev.dependencies.tach = "^0.29.0"
group.dev.dependencies.tomlkit = "^0.13.2"
group.dev.dependencies.typer = "^0.16.0"
group.dev.dependencies.types-requests = "^2.28.11"
group.dev.dependencies.types-setuptools = ">=65.7.0"
group.dev.dependencies.types-tabulate = "^0.9.0.1"
group.dev.dependencies.types-tqdm = "^4.65.0.1"
group.dev.dependencies.typos = "^1.29.0"
group.dev.dependencies.yq = "^3.4.3"
plugins."qiskit.transpiler.scheduling".aqt = "qiskit_aqt_provider.transpiler_plugin:AQTSchedulingPlugin"
plugins."qiskit.transpiler.translation".aqt = "qiskit_aqt_provider.transpiler_plugin:AQTTranslationPlugin"
plugins.pytest11.pytest_qiskit_aqt = "qiskit_aqt_provider.test.fixtures"

[tool.ruff]
target-version = "py39"
line-length = 100
lint.select = [
  "ANN",  # flake8-annotations
  "ARG",  # flake8-unused-arguments
  "BLE",  # flake8-blind-except
  "C4",   # flake8-comprehensions
  "C90",  # mccabe
  "COM",  # flake8-commas
  "D",    # pydocstyle
  "E",    # pycodestyle errors
  "ERA",  # eradicate
  "EXE",  # flake8-executable
  "F",    # pyflakes
  "FLY",  # flynt
  "I",    # isort
  "ICN",  # flake8-import-conventions
  "ISC",  # flake8-implicit-str-concat
  "NPY",  # numpy
  "PERF", # perflint
  "PGH",  # pygrep-hooks
  "PIE",  # flake8-pie
  "PL",   # pylint
  "PT",   # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "PYI",  # flake8-pyi
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "RUF",  # ruff specials
  "S",    # flake8-bandit
  "SIM",  # flake8-simplify
  "SLOT", # flake8-slots
  "T10",  # flake8-debugger
  "T20",  # flake8-print
  "TID",  # flake8-tidy-imports
  "UP",   # pyupgrade
  "W",    # pycodestyle warnings
  "YTT",  # flake8-2020
]
lint.ignore = [
  "ANN401", # any-type
  "COM812", # missing-trailing-comma
  "COM819", # prohibited-trailing-comma
  "D100",   # missing docstring in public module
  "D104",   # missing docstring in public package
  "D107",   # missing docstring in __init__
  "D206",   # indent-with-spaces
  "D211",   # no-blank-line-before-class (incompatible with D203)
  "D213",   # multiline-summary-second-line (incompatible with D212)
  "D300",   # triple-single-quotes
  "E111",   # indentation-with-invalid-multiple
  "E114",   # indentation-with-invalid-multiple-comment
  "E117",   # over-idented
  "ISC001", # single-line-implicit-string-concatenation
  "ISC002", # multi-line-implicit-string-concatenation
  "Q000",   # bad-quotes-inline-string
  "Q001",   # bad-quotes-multiline-string
  "Q002",   # bad-quotes-docstring
  "Q003",   # avoidable-escaped-quote
  "S311",   # suspicious-non-cryptographic-random-usage
  "SIM117", # multiple-with-statements
  "W191",   # tab-indentation
]
lint.per-file-ignores."examples/*.py" = [
  "T201", # allow prints
]
lint.per-file-ignores."qiskit_aqt_provider/api_client/models_generated.py" = [
  "D100",   # undocumented-public-module
  "D101",   # undocumented-public-class
  "E501",   # line-too-long
  "ERA001", # commented-out-code
  "UP",     # pyupgrade
]
lint.per-file-ignores."scripts/*.py" = [
  "T201", # allow prints
]
lint.per-file-ignores."test/**/*.py" = [
  "D205",    # allow multiline docstring summaries
  "PLR2004", # magic-value-comparison
  "PT011",   # allow pytest.raises without match=
  "S101",    # allow assertions
]
lint.pydocstyle.convention = "google"

[tool.deptry]
extend_exclude = [ "scripts", "test", "conftest.py" ]

[tool.coverage]
run.dynamic_context = "test_function"
run.relative_files = true
report.fail_under = 99

[tool.pyright]
exclude = [
  "**/__pycache__",
  "**/.*",
  "docs/",
]
typeCheckingMode = "basic"
analyzeUnannotatedFunctions = false
reportShadowedImports = true
reportTypeCommentUsage = true
reportImportCycles = false
reportMissingImports = false
reportMissingTypeStubs = false
reportConstantRedefinition = true
reportUnnecessaryTypeIgnoreComment = false
reportDuplicateImport = "error"
pythonVersion = "3.9"
pythonPlatform = "Linux"

[tool.typos]
default.extend-ignore-words-re = [
  # For consistency with pytest, prefer 'parametrize' to 'parameterize'
  "parametrized?",
  "parametrization",
]
# 'aer' is the name of the Qiskit simulator backend
default.extend-words.aer = "aer"
# 'IZ' is the name of a SparsePauli Operation
default.extend-words.IZ = "IZ"
files.ignore-hidden = false
files.ignore-vcs = true
files.extend-exclude = [
  ".git",
]

[tool.datamodel-codegen]
disable-timestamp = true
enable-faux-immutability = true
enum-field-as-literal = "one"
field-constraints = true
output-model-type = "pydantic_v2.BaseModel"
strict-nullable = true
target-python-version = "3.9"
use-annotated = true
use-double-quotes = true
use-field-description = true
use-schema-description = true
wrap-string-literal = true

[tool.interrogate]
ignore-module = true
ignore-nested-functions = true
ignore-magic = true
exclude = [
  "qiskit_aqt_provider/api_client/models_generated.py",
]
fail-under = 100

[tool.poe]
tasks.lint = [
  "check_pre_commit_consistency",
  "docstring_coverage",
  "ruff_check",
  "spellcheck",
  "check_internal_dependencies",
  "check_external_dependencies",
]
tasks.format_check = [
  "python_format_check",
  "pyproject_format_check",
]
tasks.version_check = "./scripts/package_version.py --verbose check"
tasks.docs = "sphinx-build -j auto -b html -W docs docs/_build"
tasks.all = [
  "version_check",
  "format_check",
  "lint",
  "typecheck",
  "test",
  "docs",
]
# Exclude the test module because tach doesn't collect
# dependencies outside the main group.
tasks.check_external_dependencies.shell = "deptry ."
tasks.check_internal_dependencies.shell = "tach check"
tasks.check_pre_commit_consistency.shell = "./scripts/check_pre_commit_consistency.sh"
tasks.docstring_coverage.shell = "interrogate -v qiskit_aqt_provider test"
tasks.format.shell = """
ruff format .
pyproject-fmt .
"""
tasks.pyproject_format_check.shell = "pyproject-fmt --check ."
tasks.python_format_check.shell = "ruff format --check ."
tasks.ruff_check.shell = "ruff check ."
tasks.spellcheck.shell = "typos ."
tasks.test.shell = """
set -eu
coverage run ${cov_opts} -m pytest --hypothesis-profile=ci
coverage report --show-missing
"""
tasks.test.args = [ { name = "cov_opts", default = "" } ]
tasks.typecheck.shell = "mypy ."
